集約得意先登録：コード入力時のIME無効

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -132,7 +132,7 @@
 
                         <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center"/>
                         <TextBox Grid.Column="1" x:Name="CdKyoten" Text="{Binding CdKyoten, UpdateSourceTrigger=PropertyChanged, Delay=300}" IsEnabled="{Binding IsAdd}"
-                                 MaxLength="4">
+                                 MaxLength="4" InputMethod.IsInputMethodEnabled="False">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="LostFocus">
                                     <i:InvokeCommandAction Command="{Binding EndCodeEdit}" CommandParameter="Kyoten" />
@@ -152,7 +152,7 @@
 
                         <Label Grid.Column="0" Content="集約得意先コード"/>
                         <TextBox Grid.Column="1" Text="{Binding CdSumTokuisaki, UpdateSourceTrigger=PropertyChanged, Delay=300}" IsEnabled="{Binding IsAdd}"
-                                 MaxLength="6">
+                                 MaxLength="6" InputMethod.IsInputMethodEnabled="False">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="LostFocus">
                                     <i:InvokeCommandAction Command="{Binding EndCodeEdit}" CommandParameter="SumTokuisaki" />
@@ -250,6 +250,7 @@
                                     <DataGridTextColumn.EditingElementStyle>
                                         <Style TargetType="TextBox">
                                             <Setter Property="MaxLength" Value="6"/>
+                                            <Setter Property="InputMethod.IsInputMethodEnabled" Value="False"/>
                                         </Style>
                                     </DataGridTextColumn.EditingElementStyle>
                                 </DataGridTextColumn>
