仕分ブロック登録:入力規制、エラー表示修正
・入力エラーメッセージのまとめ廃止
・入力チェック時にスペース除去
・コード入力時のIME無効

--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -238,6 +238,7 @@
                                     <DataGridTextColumn.EditingElementStyle>
                                         <Style TargetType="TextBox">
                                             <Setter Property="MaxLength" Value="2"/>
+                                            <Setter Property="InputMethod.IsInputMethodEnabled" Value="False"/>
                                         </Style>
                                     </DataGridTextColumn.EditingElementStyle>
                                 </DataGridTextColumn>
@@ -246,6 +247,7 @@
                                     <DataGridTextColumn.EditingElementStyle>
                                         <Style TargetType="TextBox">
                                             <Setter Property="MaxLength" Value="4"/>
+                                            <Setter Property="InputMethod.IsInputMethodEnabled" Value="False"/>
                                         </Style>
                                     </DataGridTextColumn.EditingElementStyle>
                                 </DataGridTextColumn>
@@ -254,6 +256,7 @@
                                     <DataGridTextColumn.EditingElementStyle>
                                         <Style TargetType="TextBox">
                                             <Setter Property="MaxLength" Value="4"/>
+                                            <Setter Property="InputMethod.IsInputMethodEnabled" Value="False"/>
                                         </Style>
                                     </DataGridTextColumn.EditingElementStyle>
                                 </DataGridTextColumn>
