--- a/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
+++ b/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
@@ -120,7 +120,7 @@
 
                     <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center" />
                     <TextBox Grid.Column="1" x:Name="CdKyoten" Text="{Binding CdKyoten, UpdateSourceTrigger=PropertyChanged, Delay=100}" IsEnabled="{Binding IsAdd}"
-                                 MaxLength="4"/>
+                                 MaxLength="4" InputMethod.IsInputMethodEnabled="False"/>
                     <Label Grid.Column="2" Background="Blue"/>
                     <TextBlock Grid.Column="2" Text="{Binding NmKyoten}" Foreground="White"/>
                 </Grid>
@@ -134,7 +134,7 @@
 
                     <Label Grid.Column="0" Content="大仕分グループ"/>
                     <TextBox Grid.Column="1" Text="{Binding CdLargeGroup,UpdateSourceTrigger=PropertyChanged}" MaxLength="3"
-                             IsEnabled="{Binding IsAdd}"/>
+                             IsEnabled="{Binding IsAdd}" InputMethod.IsInputMethodEnabled="False"/>
                     <TextBox Grid.Column="2" Text="{Binding CdLargeGroupName,UpdateSourceTrigger=PropertyChanged}" MaxLength="40"/>
                 </Grid>
 
