--- a/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
+++ b/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
@@ -141,7 +141,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="ブロック"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdBlock, UpdateSourceTrigger=PropertyChanged}" MaxLength="2" IsEnabled="{Binding IsAdd}">
+                    <TextBox Grid.Column="1" Text="{Binding CdBlock, UpdateSourceTrigger=PropertyChanged}" MaxLength="2" IsEnabled="{Binding IsAdd}"
+                             InputMethod.IsInputMethodEnabled="False">
                         <i:Interaction.Behaviors>
                             <b:NumericTextBoxBehavior/>
                         </i:Interaction.Behaviors>
@@ -221,7 +222,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="表示器数"/>
-                    <TextBox x:Name="NuTdunitCnt" Grid.Column="1" Text="{Binding NuTdunitCnt, UpdateSourceTrigger=PropertyChanged}" MaxLength="4" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
+                    <TextBox x:Name="NuTdunitCnt" Grid.Column="1" Text="{Binding NuTdunitCnt, UpdateSourceTrigger=PropertyChanged}" 
+                             MaxLength="4" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
                         <i:Interaction.Behaviors>
                             <b:NumericTextBoxBehavior/>
                         </i:Interaction.Behaviors>
@@ -236,7 +238,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="しきい値"/>
-                    <TextBox Grid.Column="1" Text="{Binding NuThreshold, UpdateSourceTrigger=PropertyChanged}" MaxLength="6" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
+                    <TextBox Grid.Column="1" Text="{Binding NuThreshold, UpdateSourceTrigger=PropertyChanged}" 
+                             MaxLength="6" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
                         <i:Interaction.Behaviors>
                             <b:NumericTextBoxBehavior Dot="True"/>
                         </i:Interaction.Behaviors>
