0007150: 大仕分処理　【ブロック別大仕分】画面で商品を選択し『箱入数変更』ボタンを押下するとＰＧが落ちます。 説明	　 再現方法	プログラムは落ちなくなりましたが、「箱入数変更」画面を表示した時に、カーソルが変更数の前に表示され、箱入数を削除してから入力しないといけない。 手間なので変更数量を包むように（変更数を青く包まれている様に）カーソルを表示し直ぐに数値を入力できる様にして下さい。

--- a/src/LargeDist/Views/ModifyQtyDialog.xaml
+++ b/src/LargeDist/Views/ModifyQtyDialog.xaml
@@ -85,6 +85,7 @@
             <TextBox Text="{Binding Box,UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" HorizontalContentAlignment="Right" x:Name="Piece" >
                 <i:Interaction.Behaviors>
                     <b:NumericTextBoxBehavior/>
+                    <b:SelectTextAtGotFocusBehavior/>
                 </i:Interaction.Behaviors>
             </TextBox>
             <Label Content="箱"/>
@@ -92,6 +93,7 @@
             <TextBox Text="{Binding Piece, UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" HorizontalContentAlignment="Right" >
                 <i:Interaction.Behaviors>
                     <b:NumericTextBoxBehavior/>
+                    <b:SelectTextAtGotFocusBehavior/>
                 </i:Interaction.Behaviors>
             </TextBox>
             <Label Content="個"/>
