0007180: 大仕分処理　【商品スキャン】画面の『商品別大仕分開始(F8)』が『商品別別大仕分開始(F8)』となっています。「別」が多いです。

--- a/src/LargeDist/Views/ItemScan.xaml
+++ b/src/LargeDist/Views/ItemScan.xaml
@@ -157,7 +157,7 @@
             </Grid.Resources>
 
             <Button Content="ブロック別大仕分開始(F5)" Command="{Binding BlockLargeDistCommand}" />
-            <Button Content="商品別別大仕分開始(F8)" Grid.Column="1" Command="{Binding ItemLargeDistCommand}" />
+            <Button Content="商品別大仕分開始(F8)" Grid.Column="1" Command="{Binding ItemLargeDistCommand}" />
         </Grid>
 
         <Grid>
