0007177: 大仕分処理　【商品一覧】画面の項目の区切り、行の区切りがわかりにくいので線を入れて下さい。

--- a/src/LargeDist/Views/ItemList.xaml
+++ b/src/LargeDist/Views/ItemList.xaml
@@ -91,7 +91,7 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Items}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
+                  SelectionUnit="FullRow" FrozenColumnCount="0" >
 
             <DataGrid.ItemContainerStyle>
                 <Style TargetType="DataGridRow">
