--- a/src/LargeDist/Views/LargeDistItemList.xaml
+++ b/src/LargeDist/Views/LargeDistItemList.xaml
@@ -66,7 +66,7 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Items}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
+                  SelectionUnit="FullRow" FrozenColumnCount="0" >
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="順番" Binding="{Binding ScanOrder}"/>
