--- a/src/LargeDist/Views/SelectItemDialog.xaml
+++ b/src/LargeDist/Views/SelectItemDialog.xaml
@@ -45,7 +45,7 @@
                   SelectedItem="{Binding SelectedItem}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
+                  SelectionUnit="FullRow" FrozenColumnCount="0" 
                   d:ItemsSource="{d:SampleData}"
                   MinHeight="200">
 
