--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -6,6 +6,8 @@
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
              Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
@@ -220,6 +222,11 @@
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
                                   CanUserAddRows="{Binding CanAddBlockRows}" SelectedIndex="{Binding SelectBlockIndex}"
                                   Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
+
+                            <i:Interaction.Behaviors>
+                                <b:EnterMoveDataGridBehavior/>
+                            </i:Interaction.Behaviors>
+
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="LightGray"/>
